syntax = "proto3";

package auth;

enum ResponseType {
  SUCCESS = 0;
  WRONGPASSWORD = 1;
  WRONGUSERNAME = 2;
  OTHER = 3;
}

message RegisterRequest {
  string name = 1;
  string password = 2;
  string email = 3;
}

message RegisterResponse {
  enum Type {
    SUCCESS = 0;
    UNIQUEVIOLATION = 1;
    OTHER = 3;
  }
  Type result = 1;
  string jwt = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  ResponseType result = 1;
  string jwt = 2;
}


service Auth {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}
